[package]
name = "intj"
version = "0.1.0"
authors = ["lumiknit <aasr4r4@gmail.com>"]
description = "Simple stack-based language extending JSON."
license = "MIT"
repository = "https://github.com/lumiknit/intj"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
